tests/test_assets/semantic/invalid/pointers/null_integer_comparison.cog
test::() -> void {
    result := null == 0;
}
